Fix more link alignment on mobile devices

--- a/sass/views/_front-page.scss
+++ b/sass/views/_front-page.scss
@@ -348,7 +348,12 @@ body {
               color: #777;
               font-weight: 500;
               letter-spacing: 0;
-              top: -2px;
+              display: inline-block;
+              line-height: auto;        
+              
+              @media(min-width: $container-ipad) {
+                top: -2px;
+              }
 
               a {
                 font-size: 13px;
@@ -356,6 +361,13 @@ body {
                 color: #777;
                 font-weight: 500;
                 letter-spacing: 0;
+                display: inline-block;
+
+                @media(max-width: $container-mobile) {
+                  line-height: .5;
+                  position: relative;
+                  top: 10px;
+                }
               }
 
               svg {
